# tritonadmix

./: .gitignore  README.md  pyproject.toml
scripts/: validate.py
tests/: test_admixture.py  test_cli.py
tritonadmix/: cli.py
tritonadmix/models/: admixture.py  cv.py
tritonadmix/viz/: __init__.py  plot.py
